2017-01-18  Jamison Hope  <jrh@theptrgroup.com>

	* kawa/rotations.scm: Don't use non-portable strings in case.

2017-01-17  Per Bothner  <per@bothner.com>

	Also change list->string and string to return immutable strings.

2017-01-17  Per Bothner  <per@bothner.com>

	Change so substring (by default) returns an immutable IString.
	* strings.scm: Move substring to ...
	* kawa/mstrings.scm: ... here.
	* kawa/istrings.scm: Add substring - returning an IString.

2017-01-06  Per Bothner  <per@bothner.com>

	Re-do so all default bindings are in kawa.base.
	* kawa/base.scm: Do-do.
	* prim_syntax.scm: Renamed to ...
	* prim_imports.scm: ... new name.  Add imports from Java code.
	* Makefile.am: Build classes in 3 stages.
	* strings.scm (string-append): Remove.
	* kawa/istrings.scm: New module, with immutable string-append.
	* kawa/mstrings.scm: New module, with mutable string-append.

2016-12-18  Per Bothner  <per@bothner.com>

	* vectors.scm (make-vector): Fix default to #!null as in documentation.
	Fixes Savannah bug #49866 "make-vector default elements #!null
	v #!undefined".

2016-12-09  Per Bothner  <per@bothner.com>

	* enums.scm: Moved from gnu/kawa/slib.
	* srfi/26.scm: Renamed from gnu/kawa/slib/cut.scm.
	* srfi/8.scm: Renamed from gnu/kawa/slib/receive.scm.
	* srfi/95.scm: Moved from srfi95.scm.
	* Makefile.am: Update accoringly.  Also compile using two separate
	commands.  This allows simplifying imports/requires.

2016-12-04  Per Bothner  <per@bothner.com>

	* syntax.scm (%symbol->construct): Update for string literal change.
	* rnrs/programs.scm (command-line): Likewise.

2016-12-03  Per Bothner  <per@bothner.com>

	Make more robust for new string representations.
	* compile_misc.scm: Use string=? to match for strings.
	This ignores String vs IString differences.
	(valuesValidateApply): Optimize 0-argument values.
	* files.scm (directory-files): Remove bogus constructor.
	* ports.scm (read-line): Fix symbol-to-string conversion.
